--- a/How Many Fingers/Base.lproj/Main.storyboard
+++ b/How Many Fingers/Base.lproj/Main.storyboard
@@ -18,41 +18,72 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="How Many Fingers?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R2N-8f-dR9">
-                                <rect key="frame" x="77" y="20" width="220" height="41"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="How Many Fingers?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R2N-8f-dR9">
+                                <rect key="frame" x="77.5" y="20" width="220" height="41"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="41" id="BGT-Fr-kBT"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="220" id="nWl-0N-j2U"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="How many fingers am i holding up?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2pe-YX-cTY">
-                                <rect key="frame" x="43" y="79" width="288" height="24"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="How many fingers am i holding up?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2pe-YX-cTY">
+                                <rect key="frame" x="43.5" y="79" width="288" height="20.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="288" id="D5r-ZR-BRx"/>
+                                    <constraint firstAttribute="height" constant="20.5" id="nNr-nm-vFG"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="l7H-38-ndO">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="l7H-38-ndO">
                                 <rect key="frame" x="139" y="134" width="97" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="f7F-na-AFU"/>
+                                    <constraint firstAttribute="width" constant="97" id="wSM-0c-V2D"/>
+                                </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2bY-RZ-FSJ">
-                                <rect key="frame" x="164" y="188" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2bY-RZ-FSJ">
+                                <rect key="frame" x="164.5" y="188" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="W7w-U2-Z6N"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="46" id="ict-w4-wzr"/>
+                                </constraints>
                                 <state key="normal" title="Guess"/>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Wrong! it was a 2." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LqS-uc-Rhx">
-                                <rect key="frame" x="70" y="235" width="235" height="28"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wrong! it was a 2." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LqS-uc-Rhx">
+                                <rect key="frame" x="102" y="235" width="171" height="20.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20.5" id="KCA-Zs-7KJ"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="171" id="fN8-bd-ton"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="l7H-38-ndO" firstAttribute="top" secondItem="2pe-YX-cTY" secondAttribute="bottom" constant="34.5" id="01h-zl-qN1"/>
+                            <constraint firstItem="l7H-38-ndO" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="3u3-Nk-XVA"/>
+                            <constraint firstItem="2pe-YX-cTY" firstAttribute="top" secondItem="R2N-8f-dR9" secondAttribute="bottom" constant="18" id="9v2-ZG-abF"/>
+                            <constraint firstItem="2pe-YX-cTY" firstAttribute="top" secondItem="R2N-8f-dR9" secondAttribute="bottom" constant="18" id="Bjv-ox-mcA"/>
+                            <constraint firstItem="LqS-uc-Rhx" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="QDm-nF-j61"/>
+                            <constraint firstItem="2bY-RZ-FSJ" firstAttribute="top" secondItem="l7H-38-ndO" secondAttribute="bottom" constant="24" id="RNZ-v3-mQv"/>
+                            <constraint firstItem="2pe-YX-cTY" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bI9-Xe-6hZ"/>
+                            <constraint firstItem="R2N-8f-dR9" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="fMR-Y5-cih"/>
+                            <constraint firstItem="2bY-RZ-FSJ" firstAttribute="top" secondItem="l7H-38-ndO" secondAttribute="bottom" constant="24" id="jFa-1Z-sCr"/>
+                            <constraint firstItem="2bY-RZ-FSJ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="n1G-BM-5dh"/>
+                            <constraint firstItem="l7H-38-ndO" firstAttribute="top" secondItem="2pe-YX-cTY" secondAttribute="bottom" constant="34.5" id="ukS-sh-4vO"/>
+                            <constraint firstItem="LqS-uc-Rhx" firstAttribute="top" secondItem="2bY-RZ-FSJ" secondAttribute="bottom" constant="17" id="v4C-Wv-KF6"/>
+                            <constraint firstItem="LqS-uc-Rhx" firstAttribute="top" secondItem="2bY-RZ-FSJ" secondAttribute="bottom" constant="17" id="ySd-V5-DtA"/>
+                            <constraint firstItem="R2N-8f-dR9" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="yXl-9a-Q8W"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
