Storyboard - number pad keyboard added to Text Field

--- a/How Many Fingers/Base.lproj/Main.storyboard
+++ b/How Many Fingers/Base.lproj/Main.storyboard
@@ -46,7 +46,7 @@
                                 </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2bY-RZ-FSJ">
                                 <rect key="frame" x="164.5" y="188" width="46" height="30"/>
